--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
-    "nodemon": "^3.0.1"
+    "mongoose-slug-generator": "^1.0.4",
+    "nodemon": "^3.0.1",
+    "slugify": "^1.6.6"
   }
 }
