--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.38.0",
     "compression": "^1.7.4",
+    "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.4",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
-    "slugify": "^1.6.6"
+    "qs": "^6.11.2",
+    "request": "^2.88.2",
+    "slugify": "^1.6.6",
+    "uuid": "^9.0.0"
   }
 }
